--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-  english_words: ^4.0.0
   audioplayers: ^0.20.1
+  # english_words: ^4.0.0
   # Use Audioplayers dependency version 0.17.4
 
 dev_dependencies:
